--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -16,12 +16,14 @@
 						<img src="/assets/between.png" height="42" />
 				<a href="https://www.instagram.com/ashotmg/"><img src="/assets/instagram.png" height="42" /></a><br/><br/>
 
-    <p>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.</p>
+    <p>Trainee at Codaisseur in Amsterdam, webdeveloper with passion and skills. I am very flexible with the ability to work different shifs when necessary and I can adapt to different shifts when necessary and I can adapt to different types of work environments easily. I have a pleasant and friendly personality with the ability to work as a team or independently.</p>
 <br/><br/>
 		<p>My WebDeveloper skills</p>
 	</div>
 
 
 <img src="/assets/skills.png" /><br/><br/><br/>
+<p class="button2"><%= link_to "Download my CV", "/assets/cv.docx", :format => 'docx' %></p>
 
 </center>
+<p class="back"></p>
