--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <title>Blog</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
- <%= stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Raleway:400,700' %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Raleway:400,700' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+
 </head>
 <body>
+
 <center><br/>
   <img src="/assets/logo.png" height="100"/><br/>
 </center><br/>
-    <p class="button">Log out</p>
+    <p class="button"><%= link_to "Log out", destroy_user_session_path %></p>
     <p class="button"><%= link_to "New Post", new_post_path %></p>
     <% if !user_signed_in? %>
       <p class="button"><%= link_to "Login to create a post", new_user_session_path %></p>
@@ -44,6 +47,8 @@
 
   <%= yield %>
 </div>
+
+
 
 </body>
 </html>
