--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -16,14 +16,14 @@
 						<%= image_tag "between.png", height: 42 %>
 					<a href="https://www.instagram.com/ashotmg/"><%= image_tag "instagram.png", height: 42 %></a><br/><br/>
 
-					<div id="flip">Click to see about me</div>
-					<div id="panel">Trainee at Codaisseur in Amsterdam, webdeveloper with passion and skills. I am very flexible with the ability to work different shifs when necessary and I can adapt to different shifts when necessary and I can adapt to different types of work environments easily. I have a pleasant and friendly personality with the ability to work as a team or independently.</div>
 
-					<br/><br/>
-				<p>My WebDeveloper skills</p>
-		</div>
+					<div id="panel">Trainee at Codaisseur in Amsterdam, webdeveloper with passion and skills.<br/> I am very flexible with the ability to work different shifs when necessary and I can adapt to different shifts when<br/> necessary and I can adapt to different types of work environments easily. I have a pleasant and friendly personality<br/> with the ability to work as a team or independently.</div>
 
-		<%= image_tag "skills.png", height: 130 %><br/><br/><br/>
+						<br/><br/>
+					<p>My WebDeveloper skills</p>
+				</div>
+
+			<%= image_tag "skills.png", height: 130 %><br/><br/><br/>
 		<p class="button2"><%= link_to "Download my CV", "/assets/cv.docx", :format => 'docx' %></p>
 
 	</center>
