--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,25 @@
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<script>
+		$(document).ready(function(){
+    	$("#flip").click(function(){
+        $("#panel").slideToggle("fast");
+    });
+	});
+	</script>
+
+<style>
+	#panel, #flip {
+    padding: 5px;
+    text-align: center;
+    border: solid 1px #00b8e6;
+	}
+
+	#panel {
+    padding: 50px;
+    display: none;
+	}
+</style>
+
 <center>
 
 	<div id="page_wrapper">
@@ -5,7 +27,6 @@
 	<div id="content">
 		<h1 class="ashot">Ashot Makhitarian</h1>
 			<h1 class="ashotmg">Trainee at Codaisseur</h1>
-				<%= image_tag "code.png", height: 80 %>
 
 				<p>Also see my other socialmedia</p><br/><br/>
 					<a href="https://www.facebook.com/ashot.makhitarian"><%= image_tag "facebook.png", height: 42 %></a>
@@ -16,14 +37,14 @@
 						<%= image_tag "between.png", height: 42 %>
 					<a href="https://www.instagram.com/ashotmg/"><%= image_tag "instagram.png", height: 42 %></a><br/><br/>
 
+					<div id="flip">Click to see about me</div>
+					<div id="panel">Trainee at Codaisseur in Amsterdam, webdeveloper with passion and skills. I am very flexible with the ability to work different shifs when necessary and I can adapt to different shifts when necessary and I can adapt to different types of work environments easily. I have a pleasant and friendly personality with the ability to work as a team or independently.</div>
 
-					<div id="panel">Trainee at Codaisseur in Amsterdam, webdeveloper with passion and skills.<br/> I am very flexible with the ability to work different shifs when necessary and I can adapt to different shifts when<br/> necessary and I can adapt to different types of work environments easily. I have a pleasant and friendly personality<br/> with the ability to work as a team or independently.</div>
+					<br/><br/>
+				<p>My WebDeveloper skills</p>
+		</div>
 
-						<br/><br/>
-					<p>My WebDeveloper skills</p>
-				</div>
-
-			<%= image_tag "skills.png", height: 130 %><br/><br/><br/>
+		<%= image_tag "skills.png", height: 130 %><br/><br/><br/>
 		<p class="button2"><%= link_to "Download my CV", "/assets/cv.docx", :format => 'docx' %></p>
 
 	</center>
