--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -27,6 +27,7 @@
 	<div id="content">
 		<h1 class="ashot">Ashot Makhitarian</h1>
 			<h1 class="ashotmg">Trainee at Codaisseur</h1>
+			<%= image_tag "code.png", height: 100 %>
 
 				<p>Also see my other socialmedia</p><br/><br/>
 					<a href="https://www.facebook.com/ashot.makhitarian"><%= image_tag "facebook.png", height: 42 %></a>
