--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,16 @@
 
 </center><br/>
 
+  <div class="lower">
     <p class="button"><%= link_to "New Post", new_post_path %></p>
+  </div>
+
+
     <p class="button"><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %><p/>
+
+
     <% if !user_signed_in? %>
-      <p class="button"><%= link_to "Login to create a post", new_user_session_path %></p>
+      <div class="login"><p class="button"><%= link_to "Login to create a post", new_user_session_path %></p></div>
     <% end %><br/>
 
     <ul>
