Text About changed

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -39,14 +39,19 @@
 					<a href="https://www.instagram.com/ashotmg/"><%= image_tag "instagram.png", height: 42 %></a><br/><br/>
 
 					<div id="flip">Click to see about me</div>
-					<div id="panel">Trainee at Codaisseur in Amsterdam, webdeveloper with passion and skills. I am very flexible with the ability to work different shifs when necessary and I can adapt to different shifts when necessary and I can adapt to different types of work environments easily. I have a pleasant and friendly personality with the ability to work as a team or independently.</div>
+					<div id="panel">I am a passionate and skilled webdeveloper who is currently doing an intership<br/> at Codaisseur in Amsterdam.
+
+When it comes to work, I am very flexibile and<br/> have a high adaptability. I will adapt to any situation without a problem.<br/>
+
+
+Personality wise, I am a very social and easy-going person.<br/> I enjoy working as a team, but I also work well independently.</div>
 
 					<br/><br/>
 				<p>My WebDeveloper skills</p>
 		</div>
 
 		<%= image_tag "skills.png", height: 130 %><br/><br/><br/>
-		<p class="button2"><%= link_to "Download my CV", "/assets/cv.docx", :format => 'docx' %></p>
+		<p class="button2"></p>
 
 	</center>
 <p class="back"></p>
