--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -114,8 +114,7 @@
           <div class="col-lg-8 col-lg-offset-2">
               <h2>Also see my other socialmedia</h2>
               <p> Feel free to mail me for any questions you have</p><br/>
-              <p><a href="mailto:ashot_3@msn.com">Mail me</a><br/><br/>
-              </p>
+
               <ul class="list-inline banner-social-buttons">
                   <li>
                       <a href="https://www.facebook.com/ashot.makhitarian" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Facebook</span></a>
@@ -125,6 +124,9 @@
                   </li>
                   <li>
                       <a href="https://www.instagram.com/ashotmg/" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Instagram</span></a>
+                  </li>
+                  <li>
+                      <a href="mailto:ashot_3@msn.com" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Contact me</span></a>
                   </li>
               </ul>
           </div>
